--- a/backend/package.json
+++ b/backend/package.json
@@ -14,8 +14,8 @@
   },
   "dependencies": {
     "@retrospected/common": "*",
-    "@sendgrid/mail": "^7.4.7",
-    "@sentry/node": "^6.13.3",
+    "@sendgrid/mail": "^7.6.0",
+    "@sentry/node": "^6.15.0",
     "@types/bcryptjs": "^2.4.2",
     "@types/connect-redis": "0.0.17",
     "@types/crypto-js": "^4.0.2",
@@ -23,16 +23,16 @@
     "@types/express": "^4.17.13",
     "@types/express-mung": "^0.5.2",
     "@types/express-rate-limit": "^5.1.3",
-    "@types/express-serve-static-core": "^4.17.24",
+    "@types/express-serve-static-core": "^4.17.25",
     "@types/express-session": "^1.17.4",
-    "@types/jest": "^27.0.2",
-    "@types/lodash": "^4.14.175",
+    "@types/jest": "^27.0.3",
+    "@types/lodash": "^4.14.177",
     "@types/md5": "^2.3.1",
-    "@types/node": "^16.11.0",
+    "@types/node": "^16.11.9",
     "@types/node-fetch": "^2.5.12",
     "@types/passport": "^1.0.7",
     "@types/passport-github2": "^1.2.5",
-    "@types/passport-google-oauth20": "^2.0.10",
+    "@types/passport-google-oauth20": "^2.0.11",
     "@types/passport-local": "^1.0.34",
     "@types/passport-microsoft": "^0.0.0",
     "@types/passport-twitter": "^1.0.37",
@@ -40,9 +40,9 @@
     "@types/redis": "2.8.32",
     "@types/shortid": "^0.0.29",
     "@types/socket.io-redis": "1.0.27",
-    "@types/uuid": "^8.3.1",
-    "@typescript-eslint/eslint-plugin": "^5.0.0",
-    "@typescript-eslint/parser": "^5.0.0",
+    "@types/uuid": "^8.3.3",
+    "@typescript-eslint/eslint-plugin": "^5.4.0",
+    "@typescript-eslint/parser": "^5.4.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "chalk": "^4.1.2",
@@ -50,23 +50,23 @@
     "cross-env": "7.0.3",
     "crypto-js": "^4.1.1",
     "csurf": "^1.11.0",
-    "date-fns": "^2.25.0",
+    "date-fns": "^2.26.0",
     "dotenv": "^10.0.0",
-    "eslint": "^8.0.1",
+    "eslint": "^8.3.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
     "express": "^4.17.1",
     "express-mung": "^0.5.1",
-    "express-rate-limit": "^5.5.0",
+    "express-rate-limit": "^5.5.1",
     "express-session": "^1.17.2",
     "freemail": "^1.7.0",
-    "jest": "27.2.5",
+    "jest": "27.3.1",
     "lexorank": "^1.0.4",
     "lodash": "^4.17.21",
     "md5": "^2.3.0",
     "moment": "^2.29.1",
     "node-fetch": "^2.6.1",
-    "nodemon": "^2.0.13",
+    "nodemon": "^2.0.15",
     "passport": "^0.5.0",
     "passport-github2": "^0.1.12",
     "passport-google-auth": "^1.0.2",
@@ -79,25 +79,29 @@
     "pg": "^8.7.1",
     "prettier": "^2.4.1",
     "random-words": "^1.1.1",
-    "rate-limiter-flexible": "^2.3.1",
+    "rate-limiter-flexible": "^2.3.5",
     "redis": "^3.1.2",
     "rimraf": "^3.0.2",
     "shortid": "^2.2.16",
-    "socket.io": "4.3.0",
+    "socket.io": "4.4.0",
     "socket.io-redis": "6.1.1",
-    "stripe": "^8.183.0",
+    "stripe": "^8.191.0",
     "ts-jest": "^27.0.7",
-    "ts-node": "^10.3.0",
-    "typeorm": "^0.2.38",
+    "ts-node": "^10.4.0",
+    "typeorm": "^0.2.41",
     "uuid": "^8.3.2",
     "yargs": "^17.2.1"
   },
   "resolutions": {
     "@types/connect-redis": "0.0.17",
-    "@types/express-session": "1.17.3"
+    "@types/express-session": "1.17.3",
+    "json-schema": "0.4.0"
   },
   "nodemonConfig": {
     "watch": "./src/",
     "ext": "ts,tsx,json"
+  },
+  "devDependencies": {
+    "json-schema": "^0.4.0"
   }
 }
