--- a/.github/workflows/alpha.yml
+++ b/.github/workflows/alpha.yml
@@ -5,7 +5,7 @@ on:
     branches: [v4200/build-system]
 
 jobs:
-  build:
+  frontend:
     runs-on: ubuntu-latest
 
     steps:
@@ -30,23 +30,13 @@ jobs:
           install: true
 
       - name: Login to DockerHub
-        uses: docker/login-action@v1
+        uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKER_NEW_USERNAME }}
           password: ${{ secrets.DOCKER_NEW_PASSWORD }}
 
-      - name: Build and push Backend
-        uses: docker/build-push-action@v2
-        with:
-          builder: ${{ steps.buildx.outputs.name }}
-          file: backend/Dockerfile
-          context: backend
-          tags: retrospected/backend:alpha
-          platforms: linux/amd64
-          push: true
-
       - name: Build and push Frontend
-        uses: docker/build-push-action@v2
+        uses: docker/build-push-action@v4
         with:
           builder: ${{ steps.buildx.outputs.name }}
           file: frontend/Dockerfile
@@ -55,9 +45,49 @@ jobs:
           platforms: linux/amd64
           push: true
 
+  backend:
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v3
+
+      - name: Read VERSION
+        id: package
+        uses: martinbeentjes/npm-get-version-action@master
+
+      - name: Echo VERSION
+        run: echo ${{ steps.package.outputs.current-version }}
+
+      - name: Setup QEMU
+        uses: docker/setup-qemu-action@v2
+        with:
+          platforms: all
+
+      - name: Setup BuildX
+        uses: docker/setup-buildx-action@v2
+        id: buildx
+        with:
+          install: true
+
+      - name: Login to DockerHub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKER_NEW_USERNAME }}
+          password: ${{ secrets.DOCKER_NEW_PASSWORD }}
+
+      - name: Build and push Backend
+        uses: docker/build-push-action@v4
+        with:
+          builder: ${{ steps.buildx.outputs.name }}
+          file: backend/Dockerfile
+          context: backend
+          tags: retrospected/backend:alpha
+          platforms: linux/amd64
+          push: true
+
   integration:
     runs-on: ubuntu-latest
-    needs: build
+    needs: [frontend, backend]
 
     steps:
       - uses: actions/checkout@v3
@@ -66,7 +96,7 @@ jobs:
 
   trivy:
     runs-on: ubuntu-latest
-    needs: build
+    needs: [frontend, backend]
 
     steps:
       - name: Trivy - Frontend
