--- a/.github/workflows/alpha.yml
+++ b/.github/workflows/alpha.yml
@@ -96,7 +96,7 @@ jobs:
       - uses: actions/upload-artifact@v3
         with:
           name: Test videos
-          path: integrations/cypress/videos
+          path: e2e/cypress/videos
           retention-days: 14
           if-no-files-found: warn # 'warn' or 'ignore' are also available, defaults to `warn`
 
