--- a/frontend/package.json
+++ b/frontend/package.json
@@ -80,6 +80,7 @@
     "util": "0.12.5",
     "uuid": "9.0.0",
     "vite": "^4.1.1",
+    "vite-plugin-ejs": "^1.6.4",
     "vite-plugin-svgr": "^2.4.0",
     "vite-tsconfig-paths": "^4.0.5",
     "vitest": "^0.28.4",
