--- a/.github/workflows/marketing.yml
+++ b/.github/workflows/marketing.yml
@@ -2,7 +2,7 @@ name: 'Marketing Build'
 
 on:
   push:
-    branches: [v5000/marketing-next]
+    branches: [v5000/marketing-final]
 
 jobs:
   marketing:
