--- a/.github/workflows/marketing.yml
+++ b/.github/workflows/marketing.yml
@@ -33,6 +33,8 @@ jobs:
         with:
           builder: ${{ steps.buildx.outputs.name }}
           file: marketing/Dockerfile
+          build-args:
+            SUB_DOMAIN: www-beta
           context: marketing
           tags: retrospected/marketing:alpha
           platforms: linux/amd64
