--- a/backend/package.json
+++ b/backend/package.json
@@ -5,18 +5,18 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "build": "rimraf dist && tsc --build && yarn copy-templates",
+    "build": "rimraf dist && tsc --build && yarn copy-templates && cp ./instrument.mjs ./dist/instrument.mjs",
     "start": "nodemon --exec 'yarn fix & node' --import ./ts-node.register.mjs ./src/index.ts",
     "create-migration": "scripty",
     "create-empty-migration": "scripty",
     "hardcode-licence": "scripty",
     "migrate": "typeorm-ts-node-esm -d src/db/index.ts migration:run",
     "revert": "typeorm-ts-node-esm -d src/db/index.ts migration:revert",
-    "lint": "eslint 'src/**/*.ts'",
+    "lint": "biome lint",
     "test": "yarn jest",
     "ci-test": "CI=true yarn test",
-    "fix": "eslint 'src/**/*.ts' --fix",
-    "backend-production": "yarn migrate-production && cd ./dist/src && node index.js",
+    "fix": "biome lint --write",
+    "backend-production": "yarn migrate-production && cd ./dist/src && node --import ../instrument.mjs index.js",
     "migrate-production": "typeorm -d dist/src/db/index.js migration:run",
     "copy-templates": "copyfiles -u 0 src/**/*.html dist/"
   },
