--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,9 +20,11 @@
     "@sentry/browser": "8.34.0",
     "@stripe/react-stripe-js": "2.8.1",
     "@stripe/stripe-js": "4.8.0",
+    "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "6.5.0",
     "@testing-library/react": "16.0.1",
     "@testing-library/react-hooks": "8.0.1",
+    "@testing-library/user-event": "^14.5.2",
     "@total-typescript/ts-reset": "^0.6.1",
     "@types/crypto-js": "4.2.2",
     "@types/emoji-mart": "3.0.14",
@@ -91,7 +93,7 @@
   "scripts": {
     "start": "vite",
     "build": "NODE_ENV=production tsc && vite build",
-    "lint": "eslint 'src/**/*.{ts,tsx}' --max-warnings=0",
+    "lint": "biome lint",
     "test": "vitest",
     "ci-test": "CI=true yarn test",
     "analyze": "source-map-explorer build/static/js/*",
